--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://binary-studio-academy.github.io/stage-2/assets/stylesheets/base.css">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <title>Résumé</title>
+    
   </head>
   <body>
     ― Hello World! &#x1F609;
