add some changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://binary-studio-academy.github.io/stage-2/assets/stylesheets/base.css">
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <title>Résumé</title>
-    
+    <link rel="stylesheet" href="./styles/main.css">
   </head>
   <body>
 
@@ -17,7 +17,7 @@
             <div class="row">
               <div class="three wide center aligned column">
                 <!-- Avatar -->
-                <img id="face" class='avatar' src="assets/" alt='Avatar'/>
+                <img id="face" class='avatar' src="./photosesion-school.png" alt='Avatar'/>
               </div>
               <div class="thirteen wide column">
                 <div class="stackable grid">
@@ -89,7 +89,7 @@
 												<div>
 													<ul>
 														<li>Making some friends</li>
-														<li>Realising that i need to do something to become good and needed for people man.</li>
+													
 														<li>Discovering a lot of new things, mostly very interesting.</li>
 														<li>Started to learn JaveScript to become the best girl programmer in the world.</li>
 													</ul>
